# zapjs

./: .gitignore  BINFIX.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  IPC.md  NEWPLAN.md  PLAN.md  README.md  STATUS.md  TEST-IPC.ts  TEST.ts  ZAPJS.md  package.json  pnpm-workspace.yaml  stress-test-report-full-1749307452534.json  stress-test-report-full-1749307634450.json  stress-test.ts  tsconfig.json
benchmarks/: RESULTS.md
benchmarks/comparative/: bun-deep-dive.ts  compare.ts  express-deep-dive.ts  fastify-deep-dive.ts  package.json
benchmarks/comparative/servers/: express-server.cjs  fastify-server.cjs  zap-server.ts
benchmarks/regression/: detect-regression.ts
benchmarks/regression/baselines/: main.json
core/: Cargo.toml
core/src/: http.rs  lib.rs  method.rs  middleware.rs  params.rs  radix.rs  request.rs  response.rs
docs/: API.md  ARCHITECTURE.md  README.md  USAGE.md  ZAPJS.md  getting-started.md
docs/api/: cli.md  dev-server.md  router.md  runtime.md
docs/architecture/: ARCHITECTURE.md
docs/guides/: api-routes.md  deployment.md  file-routing.md  server-functions.md
docs/internals/: build-pipeline.md  ipc-protocol.md  performance.md
docs/rust/: zap-codegen.md  zap-core.md  zap-macros.md  zap-server.md
examples/: basic.ts  full-app.ts  middleware.ts
rust-js/: README.md  package.json
scripts/: publish.sh
server/: Cargo.toml
server/src/: config.rs  error.rs  handler.rs  ipc.rs  lib.rs  proxy.rs  request.rs  response.rs  server.rs  static.rs  utils.rs
src/: index.ts  ipc-client.ts  process-manager.ts
tests/: basic.test.ts
tests/e2e-splice/: splice-context.test.ts  splice-crash-recovery.test.ts  splice-e2e.test.ts  splice-hot-reload.test.ts
tests/e2e-splice/test-server/: Cargo.toml
tests/e2e-splice/test-server/src/: lib.rs  main.rs
tests/e2e-splice/utils/: splice-harness.ts
tests/integration/: errors.test.ts  lifecycle.test.ts  middleware.test.ts  routes.test.ts  setup.ts
zaptest/: package.json  tsconfig.json  vite.config.ts
zaptest/routes/api/: benchmarks.ts  echo.ts  features.ts  hello.ts  posts.$id.ts  posts.ts  ssg-info.ts  stats.ts  streaming-info.ts  subscribe.ts  users.$id.ts  users.ts  websocket-info.ts
zaptest/server/src/: main.rs
zaptest/src/api/: rpc-client.ts
zaptest/src/components/: CodeDemo.tsx  Examples.tsx  Features.tsx  Hero.tsx  Performance.tsx
zaptest/src/components/docs/: DocsSections.tsx
