[workspace]
members = [
    "core",
    "server"
]
resolver = "2"

[workspace.dependencies]
# Zero-copy string operations
memchr = "2.7"
# SIMD optimizations
ahash = { version = "0.8", features = ["compile-time-rng"] }
# Fast hashing
xxhash-rust = { version = "0.8", features = ["xxh3"] }
# HTTP types
http = "1.0"
# HTTP parsing optimizations
bytes = "1.5"
# SIMD string operations  
simdutf8 = "0.1"

[workspace.dependencies.tokio]
version = "1.0"
features = ["full"]

# Test dependencies
[workspace.dependencies.tokio-test]
version = "0.4"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = 3

[profile.bench]
inherits = "release"
debug = true
