[package]
name = "zap"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "zap"
path = "src/bin/zap.rs"

[lib]
name = "zap_server"
path = "src/lib.rs"

[dependencies]
zap-core = { path = "../core" }
tokio = { workspace = true, features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mime = "0.3"
mime_guess = "2.0"
bytes = { workspace = true }
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
tower-service = "0.3"
pin-project-lite = "0.2"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
