[package]
name = "test-server"
version = "0.1.0"
edition = "2021"

[lib]
name = "test_server"
path = "src/lib.rs"
crate-type = ["cdylib"]

[[bin]]
name = "test-server"
path = "src/main.rs"

[dependencies]
zap = { path = "../../../packages/server" }
splice = { path = "../../../packages/server/splice" }
tokio = { workspace = true, features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
